Veretino 0.3.1 (in dev currently)
* Now the database stores not only the update time, but also the time of the last successful check (when all files from the list are present on the disk and their current checksums have been calculated and match).
* Added an improved Dialog displaying the database status.
* Pressing Enter again in the path edit field performs a quick action (compute/verify file's checksum or open database).

Veretino 0.3.0
* The internal data architecture has been redesigned.
* Now, when calculating checksums for a list of files (selected folder), a visual model is created that displays the details of the process: which files are in the queue and which have already been processed. The checksum and, if verification is running, the result of the compliance check are immediately visible.
* Added menu item "Forget all changes". Now, when a database is overwritten, a temporary backup copy is created. This makes it possible to undo all changes by restoring the original database from a backup.
* The program now prevents all items from being deleted from the database. For example, in the case when all the listed files are missing on the disk.
* Added sorting feature. Also, now when viewing the database model, folders are grouped top/bottom.
* In database browsing mode, the saved checksums are now displayed, and, if mismatches are detected, the newly calculated checksums (ReChecksums) are also displayed. Both of these columns can be hidden.
* Added a context menu for the "SHA-Button", allowing to quickly change the Algorithm (SHA-1 : SHA-256 : SHA-512).
* The main context menu has become more functional.
* Added the ability to copy a recomputed checksum (ReChecksum) to the clipboard.
* Now file statuses are always displayed.
* Notifications when calculations are completed have become a little more informative.
* Multiple small improvements